fix spacing paddin

--- a/src/abstracts/_mixin.scss
+++ b/src/abstracts/_mixin.scss
@@ -11,7 +11,7 @@
 @mixin spacing() {
     width: 100%;
 
-    padding: 16px;
+    // padding: 16px;
     margin: 0;
 }
 
