--- a/src/styles/layout/mainLayout.scss
+++ b/src/styles/layout/mainLayout.scss
@@ -3,6 +3,8 @@
 .mainLayout {
     @include flex(column, space-between);
     @include spacing();
+
+    padding: 16px;
     
     width: 100%;
     height: 100lvh;
